<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="app_logo">App logo, drawing of a bowl</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">1072908349752058</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb1072908349752058</string>

    <!--  Map and menus -->
    <string name="error_unknown_error">An unknown error happened…</string>
    <string name="open_navigation_drawer">Open menu drawer</string>
    <string name="close_navigation_drawer">Close menu drawer</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">Location is not enabled</string>
    <string name="open_location_settings">Authorize shared location</string>
    <string name="loading">Loading…</string>
    <string name="connecting">Connecting…</string>
    <string name="signing_out">Disconnecting…</string>

    <string name="an_error_happened">An error happened</string>


    <!-- Restaurant infos-->
    <string name="workmates_eating_at">%1$s is eating at %2$s</string>
    <string name="workmate_hasnt_decided">"%s hasn't decided yet…"</string>
    <string name="workmate_is_eating_here">%s  is eating here !</string>
    <string name="no_restaurant_chosen">No restaurant chosen today…</string>
    <string name="restaurant_type">"%s - "</string>
    <string name="nbr_of_workmates">"(%d)"</string>
    <string name="distance">"%dm"</string>
    <string name="you_are_eating_here">"You're eating here !"</string>
    <string name="chat_with">Chat with %s</string>
    <string name="today_lunch_text_view">LUNCH OF THE DAY:</string>
    <string name="no_previous_restaurant">No previous restaurants…</string>
    <string name="weekdays_opening_hours_title">Opening hours</string>
    <string name="weekdays_openings">"Monday: 11:30 AM – 3:00 PM, 6:00 – 11:00 PM\nTuesday: 11:30 AM – 3:00 PM, 6:00 – 11:00 PM\nWednesday: 11:30 AM – 3:00 PM, 6:00 – 11:00 PM\nThursday: 11:30 AM – 3:00 PM, 6:00 – 11:00 PM\nFriday: 11:30 AM – 3:00 PM, 6:00 – 11:00 PM\nSaturday: 11:30 AM – 3:00 PM, 6:00 – 11:00 PM\nSunday: Closed"</string>
    <string name="previous_restaurants">PREVIOUS RESTAURANTS</string>
    <string name="open_until">Open until %s</string>
    <string name="open_24h">Open 24h/7</string>
    <string name="open_at">Opening at %s</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>
    <string name="close_will_open_at">Closed. Will open at %s</string>
    <string name="opening_hours_unavailable">Opening hours unavailable</string>
    <string name="restaurant_photo">Restaurant photo</string>
    <string name="person_icon">Abstract icon of person</string>
    <string name="star_icon_description">star icon</string>
    <string name="call">CALL</string>
    <string name="like_restaurant_icon_description">Like restaurant icon</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="deleted_from_fav">Deleted from favorites</string>
    <string name="website_unavailable">Website unavailable</string>
    <string name="open_browser">Open browser</string>
    <string name="visit_website">Visit %s website ?</string>
    <string name="permission_denied">Permission DENIED</string>
    <string name="prefix_call" translatable="false">tel:</string>
    <string name="closed" translatable="false">Closed</string>
    <string name="closed_in_french">Fermé</string>
    <string name="no_restaurant_selected">No restaurants…</string>
    <string name="open_details_about_restaurant">Open details about restaurant</string>
    <string name="favorite_restaurants">FAVORITE RESTAURANTS</string>
    <string name="closing_soon">Closing soon</string>
    <string name="phone_number_not_available">N° not available</string>
    <string name="confirm_call">Call</string>
    <string name="would_you_like_to_call_place">"Call %s ?"</string>

    <!-- Settings Activity Notifications -->
    <string name="notification_message">You\'re eating at %1$s. Address: %2$s. You will be joined by %3$s.</string>
    <string name="notification_message_solo_lunch">You\'re eating at %1$s. Address: %2$s.</string>
    <string name="toast_title_no_image_chosen">No image selected</string>
    <string name="reminder_deactivated">Reminder deactivated</string>
    <string name="connection_succeed">Connection successful</string>
    <string name="error_no_internet">Having trouble connecting to the Internet</string>
    <string name="and">" and "</string>
    <string name="settings">Settings</string>
    <string name="change_profile_picture">Profile picture</string>
    <string name="french_locale">French</string>
    <string name="touch_to_update">Touch to update</string>
    <string name="enable_reminder">Enable/Disable daily reminder</string>
    <string name="language">Language</string>
    <string name="change_username">Username</string>
    <string name="delete_account">Do you want to delete your account permanently ?</string>
    <string name="delete">Delete</string>
    <string name="account_deleted">Account deleted</string>
    <string name="empty_field">Can\'t save empty field</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="save">Save</string>
    <string name="english_locale">English</string>
    <string name="locale_saved">Language saved</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="logo_edit_username">logo edit username</string>
    <string name="logo_save_username">logo save username</string>
    <string name="cancel_username_update">logo cancel username update</string>
    <string name="choose_profile_picture">Select a picture</string>
    <string name="time_to_eat">Time to eat !</string>
    <string name="reminder_disabled">Daily reminder disabled</string>
    <string name="reminder_activated">Daily reminder activated</string>

    <!-- Chat activity -->
    <string name="profile_picture">Profile picture</string>
    <string name="no_messages_in_chat_yet">"This chat session doesn't have any messages yet…"</string>
    <string name="image_preview">Image selected from phone preview</string>
    <string name="add_file_button">Add file button</string>
    <string name="write_a_message">"Write a message…"</string>
    <string name="send_message">Send a message</string>
    <string name="image_sent">Image sent</string>
    <string name="close_search_bar">close search bar</string>
    <string name="search_for_restaurant">Search restaurants…</string>
    <string name="photo_access_declined">Photo access declined</string>
    <string name="error_sending_message">Error while sending message</string>


    <!-- UI and content descriptions -->
    <string name="cant_get_location">Unable to get current location</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="im_hungry">I\'m Hungry!</string>
    <string name="search_for_a_workmate">Search workmates…</string>
    <string name="available_workmates">Available workmates</string>
    <string name="my_lunch_toolbar_title">My lunch</string>
    <string name="workmates">Workmates</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings_drawer">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="internet_unavailable">Internet connection unavailable</string>
    <string name="search_button">Search button</string>
    <string name="app_requires_location">This app requires access to your location to work properly.</string>
    <string name="close_current_window_icon">Previous page</string>
    <string name="account_doesnt_exist">This account has been deleted</string>
    <string name="search_bar_button">Search bar button</string>

    <!-- LOGIN -->
    <string name="subtitle_app_logo">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="google_logo" translatable="false">Google logo</string>
    <string name="facebook_logo" translatable="false">Facebook logo</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="photo_permission_rationale">Allow Go4Lunch to access the pictures, medias and files on your device ?</string>
    <string name="image_restaurant">image restaurant</string>
    <string name="choose_restaurant_to_go">Choose restaurant</string>

</resources>
