<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_lunch_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow_white"
        app:title="@string/my_lunch_toolbar_title"
        app:titleTextColor="@color/quantum_white_text" />

    <TextView
        android:id="@+id/workmate_lunch_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/detail_lunch_textview"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_lunch_toolbar"
        app:layout_constraintVertical_bias="0.1" />


    <ImageView
        android:id="@+id/workmate_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/workmate_detail_lunch"
        layout="@layout/workmates_restaurant_preview">
    </include>

    <TextView
        android:id="@+id/chat_with_workmate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bkg_message_btn"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="10dp"
        tools:text="@sample/tasks.json/chat_with_user"
        android:textColor="@color/quantum_white_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/favorite_restaurants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bkg_message_btn"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="Afficher mes restaurants favoris"
        android:textColor="@color/quantum_white_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/previous_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/previous_restaurants"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workmate_detail_lunch" />

    <TextView
        android:id="@+id/no_previous_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:textStyle="italic"
        android:text="@string/no_previous_restaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_restaurants" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previous_restaurants_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/previous_restaurants"
        app:layout_constraintBottom_toTopOf="@id/chat_with_workmate_btn"
        tools:listitem="@layout/workmates_restaurant_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>