<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workmate_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8FFFFFF">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="#D8FFFFFF">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bkg_user_profile"
            app:collapsedTitleTextAppearance="@style/collapsingToolbarLayoutTitleColor"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/expandedToolbarTitleColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/workmate_profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_picture"
                android:fitsSystemWindows="true"
                android:src="@drawable/ic_profile_no_pic"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/user_lunch_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_arrow_white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nested_scroll_view"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_lunch_of_the_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bkg_profile_lunch_text_view"
                android:paddingStart="@dimen/default_margin"
                android:paddingTop="5dp"
                android:paddingEnd="@dimen/default_margin"
                android:paddingBottom="5dp"
                android:text="@string/today_lunch_text_view"
                android:textColor="@color/quantum_white_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- LUNCH OF THE DAY -->
            <include
                android:id="@+id/lunch_of_the_day"
                layout="@layout/workmates_restaurant_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_lunch_of_the_day" />

            <androidx.cardview.widget.CardView
                android:id="@+id/no_restaurant_selected_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:visibility="gone"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_lunch_of_the_day">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/no_restaurant_selected"
                    android:textStyle="italic" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_workmate_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bkg_profile_lunch_text_view"
                android:paddingStart="@dimen/default_margin"
                android:paddingTop="5dp"
                android:paddingEnd="@dimen/default_margin"
                android:paddingBottom="5dp"
                android:text="@string/favorite_restaurants"
                android:textColor="@color/quantum_white_text"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/favorites_and_previous_scrollview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lunch_of_the_day" />

            <HorizontalScrollView
                android:id="@+id/favorites_and_previous_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@+id/lunch_of_the_day">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:checkedChip="@id/chip_favorites"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:singleSelection="true"
                        app:selectionRequired="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_favorites"
                            style="@style/chipBackground"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25sp"
                            android:checkable="true"
                            android:focusable="true"
                            android:text="@string/favorite_restaurants"
                            android:textColor="@color/quantum_white_text"
                            app:checkedIconVisible="false" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_previous_lunches"
                            style="@style/chipBackground"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="25dp"
                            android:checkable="true"
                            android:focusable="true"
                            android:text="@string/previous_restaurants"
                            android:textColor="@color/quantum_white_text"
                            app:checkedIconVisible="false" />
                    </com.google.android.material.chip.ChipGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/no_restaurant_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:visibility="gone"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorites_and_previous_scrollview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/no_restaurant_selected"
                    android:textStyle="italic" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_restaurants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_view_workmate_favorites"
                tools:listitem="@layout/workmates_restaurant_preview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_message_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:borderWidth="0dp"
        android:theme="@style/MyFAB"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_textsms_black_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>